wip: add group event swagger and initial tests
